# inventree-zapier

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: pep.yaml  pypi.yaml
inventree_zapier/: models.py  version.py  zapier_plugin.py
src/inventree_zapier/: ZapierPlugin.py  __init__.py  models.py
